--- a/trunk/Languages/default-en.xml
+++ b/trunk/Languages/default-en.xml
@@ -2750,6 +2750,8 @@
 	<string id="16807" value="Please type the bandwidth limit you wish to set in the form &quot;123 kb/s&quot; for kilobits per second, or &quot;123 KB/s&quot; for kilobytes per second."/>
 	<string id="16808" value="You have not selected your age and gender.  Are you sure you want to continue without doing this?"/>
 	<string id="16809" value="E&amp;xit"/>
+	<string id="16810" value="year old"/>
+	<string id="16811" value="Automatic"/>
 	<string id="16864" value="Querying host discovery services..."/>
 	<string id="16865" value="Querying discovery service &quot;%s&quot;..."/>
 	<string id="16866" value="GWebCache transaction successful (&quot;%s&quot;)."/>
@@ -2975,7 +2977,7 @@
 		<control caption="Expand new downloads by default"/>
 		<control caption="Show a prompt before opening URLs"/>
 		<control caption="Show rates in:"/>
-		<control/>
+		<control caption="bits/second|bytes/second|b/s|B/s|Kb/s|KB/s|Mb/s|MB/s"/>
 		<control caption="_Tooltips:"/>
 		<control/>
 		<control caption="Delay (ms):"/>
@@ -2984,9 +2986,9 @@
 		<control/>
 		<control caption="_Tray:"/>
 		<control caption="When I click close:"/>
-		<control/>
+		<control caption="Ask Me|Close Immediately|Minimise to Tray|Close After Transfers"/>
 		<control caption="When I click minimise:"/>
-		<control/>
+		<control caption="Normal|Minimise to Tray"/>
 		<control caption="Hide side bar when starting search"/>
 		<control caption="Filter adult content from searches"/>
 	</dialog>
@@ -3062,7 +3064,7 @@
 	<dialog name="CConnectionSettingsPage" cookie="BuStCoStEdBuStCoBuBuStCoStCoBuBuBuStEdmsStEdmsBu" caption="Connection">
 		<control caption="_Inbound Address:"/>
 		<control caption="Address:"/>
-		<control/>
+		<control caption="Automatic"/>
 		<control caption="Port:"/>
 		<control/>
 		<control caption="Random"/>
@@ -3071,7 +3073,7 @@
 		<control caption="Force binding to this address"/>
 		<control caption="_Outbound Address:"/>
 		<control caption="Address:"/>
-		<control/>
+		<control caption="Automatic"/>
 		<control caption="Speed:"/>
 		<control/>
 		<control caption="O_ptions:"/>
@@ -3121,7 +3123,7 @@
 		<control caption="Limit:"/>
 		<control/>
 		<control caption="Mode:"/>
-		<control/>
+		<control caption="Maximum|Average"/>
 		<control caption="_Queues:"/>
 		<control/>
 		<control caption="_New..."/>
@@ -3348,13 +3350,13 @@
 
 	<dialog name="CWizardConnectionPage" cookie="StCoStCoStCoStCoStCo" caption="Welcome to Shareaza [3 of 7]">
 		<control caption="For optimum performance, Shareaza needs to know a little bit about your connection to the Internet."/>
-		<control/>
+		<control caption="&#160;( please select )| I am using the Internet at home| I am using the Internet on a college LAN| I am using the Internet on a office LAN| I am using the Internet at a hotel or airport"/>
 		<control caption="Is your network or campus protected by a firewall or NAT router?"/>
-		<control/>
+		<control caption="&#160;No, I CAN accept all incoming connections| Yes, so I CANNOT accept incoming connections from the Internet| I don't know, please AUTO-DETECT the firewalled state"/>
 		<control caption="Do you have a firewall or NAT router on your home Internet connection?"/>
-		<control/>
+		<control caption="&#160;No, I have FULL ACCESS to the Internet| Yes, but I will set up port-forwarding for Shareaza| Yes, so I CANNOT accept incoming connections from the Internet| I don't know, please AUTO-DETECT the firewalled state"/>
 		<control caption="If you know how fast your Internet connection is able to operate, select the best option below:"/>
-		<control/>
+		<control caption="| Dial up Modem| ISDN| ADSL (256K)| ADSL (512K)| ADSL (768K)| ADSL (1.5M)| Cable Modem/SDSL| T1| T3| LAN| OC3"/>
 		<control caption="OR, choose:"/>
 		<control/>
 	</dialog>
@@ -3384,7 +3386,8 @@
 		<control caption="I use the name:"/>
 		<control/>
 		<control caption="and I'm a:"/>
-		<control/><control/>
+		<control caption="&#160;(choose)"/>
+		<control caption="&#160;(choose)| guy| girl| man| woman"/>
 		<control caption="from:"/>
 		<control/><control/>
 	</dialog>
@@ -3433,7 +3436,7 @@
 		<control caption="Real Name:"/>
 		<control/><control/>
 		<control caption="_Vitals:"/>
-		<control/>
+		<control caption="|Male|Female"/>
 		<control caption="Gender:"/>
 		<control/>
 		<control caption="Age:"/>
@@ -3521,7 +3524,7 @@
 		<control caption="Initiate a new connection to host or server:|Browse this host:"/>
 		<control/><control/>
 		<control caption="Network _Protocol:"/>
-		<control/>
+		<control caption="Gnutella1 (auto)|Gnutella2 (?uto)|eDonkey2000"/>
 		<control caption="_Suppress Ultrapeer"/>
 		<control caption="Connect"/>
 		<control caption="Cancel"/>
@@ -3616,7 +3619,7 @@
 	<dialog name="CFileCommentsPage" cookie="StStCoStEdEd" caption="My Review">
 		<control caption="My Rating"/>
 		<control caption="I rate this file:"/>
-		<control/>
+		<control caption="(No Rating)|Fake/Corrupt/Misleading|Poor|Average|Good|Very Good|Excellent"/>
 		<control caption="My Review and Comments"/>
 		<control/><control/>
 	</dialog>
@@ -3705,7 +3708,7 @@
 	<dialog name="CSecureRuleDlg" cookie="BuStCoStEdBuStEdEdEdEdStEdEdEdEdBuEdBuBuBuStCoStCoEdStEdStEdStBuBu" caption="Security Rule">
 		<control caption="_Rule:"/>
 		<control caption="Type:"/>
-		<control/>
+		<control caption="Network (IP) Address|Content Filter"/>
 		<control caption="Comment:"/>
 		<control/>
 		<control caption="_Network Address:"/>
@@ -3719,9 +3722,10 @@
 		<control caption="Match All"/>
 		<control caption="_Options:"/>
 		<control caption="Action:"/>
-		<control/>
+		<control caption="None|Accept|Deny"/>
 		<control caption="Expire:"/>
-		<control/><control/>
+		<control caption="Never (Indefinite)|At End of Session|After:"/>
+		<control/>
 		<control caption="d"/>
 		<control/>
 		<control caption="h"/>
@@ -3754,7 +3758,7 @@
 		<control caption="You have selected %lu files to export as Shareaza-powered URI references.  Please select the format for the URIs, and click Save:"/>
 		<control/>
 		<control caption="Insert Token:"/>
-		<control/>
+		<control caption="Tiger Root|SHA1|MD5|ED2K (CMD4)|Filename|Filename (URI)|Base Filename|File Extension|File Size|File Size (bytes)|Folder Path|Local Host|Local Port"/>
 		<control caption="Select preset:"/>
 		<control/>
 		<control caption="Cancel"/>
@@ -3944,7 +3948,8 @@
 	<dialog name="CMediaVisDlg" cookie="StBuSyCoBuBuBu" caption="Select Visualisation">
 		<control/>
 		<control caption="Select an audio visualisation from the list:"/>
-		<control/><control/>
+		<control/>
+		<control caption="Footer Display|Full Size Display|Large Display|Medium Display|Small Display"/>
 		<control caption="_Setup..."/>
 		<control caption="OK"/>
 		<control caption="Cancel"/>
